feat: complete provider CRUD operations (get, update, delete)